# cmake-buildsystem

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/src/: main.cpp
test/: CMakeLists.txt
test/src/: simpleTest.cpp  testsMain.cpp
